Fixed unreadable links in slate theme

--- a/docs/stylesheets/govsocial.css
+++ b/docs/stylesheets/govsocial.css
@@ -7,6 +7,14 @@
   --md-accent-fg-color--transparent:   #B31942;
 }
 
+[data-md-color-scheme="slate"] {
+  --md-typeset-a-color: #ffffff;
+}
+
+.md-typeset a {
+  text-decoration: underline;
+}
+
 li > code {
   color: #B31942 !important;
 }
